@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US002

class Administrator {
}

class Client {
    id
    name
    vatin
    phoneNumber
    email
}

class Address {
    id
    street
    zipCode
    town
    country
}

enum CompanyType {
    type
}

Administrator "1" -- "1..*" Client : delete >
Client "*" -- "1" Address : has >
Client "*" -- "1" CompanyType : has >

@enduml
